--- a/TypeScript/aula-17/index.html
+++ b/TypeScript/aula-17/index.html
@@ -6,8 +6,8 @@
     <title>TypeScript</title>
 </head>
 <body>
-    <h1>Aula 17 - TypeScript</h1>
+    <h1>Aula 18 - TypeScript</h1>
 
-    <script src="index.ts"></script>
+    <script src="dist/index.js"></script>
 </body>
 </html>
